# istanbul-retail-sales

./: .gitignore  README.md  permission.sh  pyproject.toml  setup.sh
src/: docker-infra-build.sh  docker-infra-clean.sh
src/airflow/: Dockerfile  airflow-build.sh  airflow-clean.sh  docker-compose.yaml  requirements.txt
src/kafka/: docker-compose.yaml  produce_data_to_kafka.py
src/spark/: cluster-base.Dockerfile  docker-compose.yaml  jupyterlab.Dockerfile  spark-base.Dockerfile  spark-build.sh  spark-clean.sh  spark-master.Dockerfile  spark-worker.Dockerfile
src/spark/pyspark/: stream_data.py
src/spark/pyspark/app/: spark_app.py  test.ipynb
src/spark/pyspark/schema/: customer_schema.py
src/spark/pyspark/transform/: spark_stream.py  spark_transform.py
src/terraform/: airflow_vm.tf  bigquery.tf  common_tags.json  dataproc.tf  kafka_vm.tf  main.tf  provider.tf  storage.tf  variables.tf
